--- a/ExpressionWindow/ExpressionWindow.csproj
+++ b/ExpressionWindow/ExpressionWindow.csproj
@@ -50,6 +50,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DesignTimeResourceDictionary.cs" />
     <Compile Include="ExpressionDialog.cs" />
     <Compile Include="ExpressionMessageBox.cs" />
     <Compile Include="NumericUpDown.xaml.cs">
@@ -58,6 +59,9 @@
     <Compile Include="Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExpressionWindow.cs" />
+    <None Include="Utilities\EWPreBuild.bat" />
+    <None Include="Utilities\ResEnd.xamlgen" />
+    <None Include="Utilities\ResStart.xamlgen" />
     <Page Include="NumericUpDown.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -66,6 +70,30 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <None Include="Themes\Blue.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Green.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Grey.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Orange.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Pink.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Purple.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Red.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Yellow.xamlgen">
+      <SubType>Designer</SubType>
+    </None>
     <Page Include="Themes\GreenColors.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,10 +124,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Themes\ExpressionDarkBase.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <None Include="Themes\ExpressionDarkBase.xamlgen">
       <SubType>Designer</SubType>
-    </Page>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\Warning_Green.png" />
@@ -128,7 +155,13 @@
     <Resource Include="Icons\Question_White.png" />
     <Resource Include="Icons\Question_Yellow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Utilities\SimpleTextMerger.exe" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>$(SolutionDir)ExpressionWindow/Utilities/EWPreBuild.bat $(SolutionDir)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
