--- a/DemoWindow/DemoWindow.csproj
+++ b/DemoWindow/DemoWindow.csproj
@@ -40,6 +40,9 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Windows.Shell">
+      <HintPath>C:\Users\sdrouin\Desktop\MvvmExample\Microsoft.Windows.Shell.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
