--- a/DemoWindow/DemoWindow.csproj
+++ b/DemoWindow/DemoWindow.csproj
@@ -41,7 +41,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Windows.Shell">
-      <HintPath>C:\Users\sdrouin\Desktop\MvvmExample\Microsoft.Windows.Shell.dll</HintPath>
+      <HintPath>..\packages\WPF.Shell.Integration.Library.2.0\lib\net30\Microsoft.Windows.Shell.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
