--- a/ExpressionWindow/ExpressionWindow.csproj
+++ b/ExpressionWindow/ExpressionWindow.csproj
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{12AC5E51-4F44-4E49-BDE6-3126FA24D010}</ProjectGuid>
+    <ProjectGuid>{9F3292C6-ED2C-4D41-88D7-CEAB4CA8413C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ThemedWindows</RootNamespace>
+    <RootNamespace>ExpressionWindow</RootNamespace>
     <AssemblyName>ExpressionWindow</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -30,12 +29,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Windows.Shell, Version=3.0.50506.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Windows.Shell">
       <HintPath>..\packages\WPF.Shell.Integration.Library.2.0\lib\net30\Microsoft.Windows.Shell.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
@@ -43,7 +38,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -53,69 +47,96 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\MonoPictureButton.cs" />
-    <Compile Include="Effects\ColorizeEffect.cs" />
-    <Compile Include="Effects\ColorizeBCSEffect.cs" />
-    <Compile Include="Effects\BCSEffect.cs" />
     <Compile Include="Controls\ColorButton.cs" />
+    <Compile Include="Controls\MonoPictureButton.cs" />
     <Compile Include="Controls\NumericUpDown.cs" />
     <Compile Include="DesignTimeResourceDictionary.cs" />
+    <Compile Include="Effects\BCSEffect.cs" />
+    <Compile Include="Effects\ColorizeBCSEffect.cs" />
+    <Compile Include="Effects\ColorizeEffect.cs" />
     <Compile Include="Effects\ShaderHelper.cs" />
     <Compile Include="ExpressionDialog.cs" />
     <Compile Include="ExpressionMessageBox.cs" />
-    <Compile Include="Utilities.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExpressionWindow.cs" />
-    <Resource Include="Effects\BCSEffect.ps" />
-    <Resource Include="Effects\ColorizeBCSEffect.ps" />
-    <Resource Include="Effects\ColorizeEffect.ps" />
-    <None Include="Themes\Sources\Colors\Blue.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Green.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Grey.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Orange.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Pink.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Purple.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Red.xaml">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Sources\Colors\Yellow.xaml">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Themes\Sources\ExpressionDarkBase.xaml">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icons\Warning_Green.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icons\Warning_Blue.png" />
-    <Resource Include="Icons\Warning_Grey.png" />
-    <Resource Include="Icons\Warning_Orange.png" />
-    <Resource Include="Icons\Warning_Pink.png" />
-    <Resource Include="Icons\Warning_Purple.png" />
-    <Resource Include="Icons\Warning_Red.png" />
-    <Resource Include="Icons\Warning_White.png" />
-    <Resource Include="Icons\Warning_Yellow.png" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Resource Include="Themes\BlueColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\GreenColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\GreyColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\OrangeColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\PinkColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\PurpleColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <Resource Include="Themes\RedColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+    <None Include="Themes\Sources\Colors\Blue.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Green.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Grey.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Orange.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Pink.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Purple.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Red.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\Colors\Yellow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Themes\Sources\ExpressionDarkBase.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+    <Resource Include="Themes\YellowColors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Effects\BCSEffect.fx" />
+    <None Include="Effects\ColorizeBCSEffect.fx" />
+    <None Include="Effects\ColorizeEffect.fx" />
+    <Resource Include="Icons\Question.png" />
     <Resource Include="Icons\Question_Blue.png" />
     <Resource Include="Icons\Question_Green.png" />
     <Resource Include="Icons\Question_Grey.png" />
@@ -125,46 +146,37 @@
     <Resource Include="Icons\Question_Red.png" />
     <Resource Include="Icons\Question_White.png" />
     <Resource Include="Icons\Question_Yellow.png" />
+    <Resource Include="Icons\Warning.png" />
+    <Resource Include="Icons\Warning_Blue.png" />
+    <Resource Include="Icons\Warning_Green.png" />
+    <Resource Include="Icons\Warning_Grey.png" />
+    <Resource Include="Icons\Warning_Orange.png" />
+    <Resource Include="Icons\Warning_Pink.png" />
+    <Resource Include="Icons\Warning_Purple.png" />
+    <Resource Include="Icons\Warning_Red.png" />
+    <Resource Include="Icons\Warning_White.png" />
+    <Resource Include="Icons\Warning_Yellow.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Effects\BCSEffect.fx" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Effects\ColorizeBCSEffect.fx" />
-    <None Include="Effects\ColorizeEffect.fx" />
-    <Content Include="fxc.exe" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Themes\BlueColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\GreenColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\GreyColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\OrangeColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\PinkColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\PurpleColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\RedColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="Themes\YellowColors.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
+    <Resource Include="Effects\BCSEffect.ps" />
+    <Resource Include="Effects\ColorizeBCSEffect.ps" />
+    <Resource Include="Effects\ColorizeEffect.ps" />
+    <None Include="Icons\Gimp Colorize Colors\Blue.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Green.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Grey.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Orange.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Pink.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Purple.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Red.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\White.gcc" />
+    <None Include="Icons\Gimp Colorize Colors\Yellow.gcc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)SimpleResourceDictionaryMerger\bin\$(ConfigurationName)\SimpleResourceDictionaryMerger.exe"
+    <PreBuildEvent>echo merging themes...
+"$(SolutionDir)XAMLMerger\$(OutDir)XAMLMerger.exe" "$(SolutionDir)"
 
-cd $(ProjectDir)BitmapEffects
+cd $(ProjectDir)Effects
 "$(ProjectDir)fxc.exe" /T ps_2_0 /E main /Fo "$(ProjectDir)Effects\BCSEffect.ps" "$(ProjectDir)Effects\BCSEffect.fx"
 "$(ProjectDir)fxc.exe" /T ps_2_0 /E main /Fo "$(ProjectDir)Effects\ColorizeBCSEffect.ps" "$(ProjectDir)Effects\ColorizeBCSEffect.fx"
 "$(ProjectDir)fxc.exe" /T ps_2_0 /E main /Fo "$(ProjectDir)Effects\ColorizeEffect.ps" "$(ProjectDir)Effects\ColorizeEffect.fx"</PreBuildEvent>
